# fast_syndication

./: .gitignore  CHANGELOG.md  README.md  mix.exs
.github/workflows/: elixir.yaml
lib/: fast_syndication.ex
native/fastsyndication/: Cargo.toml  README.md
native/fastsyndication/src/: lib.rs
test/: fast_syndication_test.exs
