[package]
name = "fastsyndication"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "fastsyndication"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.23.0"
atom_syndication = { version = "0.11", features = ["with-serde"] }
rss = { version = "2.0", features = ["serde"], default-features = false }

serde = "1.0"
serde-transcode = "1.1"
serde_json = "1.0"
serde_rustler = { git = "https://github.com/avencera/serde_rustler.git", branch = "rustler-0.23" }
